<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/dimen_30dp"
    android:paddingHorizontal="@dimen/dimen_30dp"
    tools:context=".presentation.activity.SearchActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgBack"
        android:layout_width="@dimen/dimen_28dp"
        android:layout_height="@dimen/dimen_28dp"
        android:src="@drawable/ic_back"
        android:padding="@dimen/dimen_4dp"
        android:background="?selectableItemBackground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTitle"
        style="@style/MealRecipeText.SemiBold.18"
        android:layout_width="wrap_content"
        android:textColor="@color/colorBlack"
        android:text="@string/label_search_recipes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilSearch"
        style="@style/MealRecipeTextInputLayout"
        app:endIconMode="clear_text"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_marginTop="@dimen/dimen_30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtSearch"
            style="@style/MealRecipeText"
            android:layout_width="match_parent"
            android:drawableStart="@drawable/ic_search"
            android:drawablePadding="@dimen/dimen_8dp"
            android:hint="@string/hint_search_recipe"
            android:imeOptions="actionDone"
            android:inputType="textEmailAddress"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvSearch"
        style="@style/MealRecipeText.SemiBold.16"
        android:layout_width="wrap_content"
        android:textColor="@color/colorBaseBlack"
        android:text="@string/label_search_result"
        android:layout_marginTop="@dimen/dimen_24dp"
        app:layout_constraintTop_toBottomOf="@id/tilSearch"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/MealRecipeText.Regular.12"
        android:layout_width="wrap_content"
        android:textColor="@color/colorGray"
        tools:text="255 results"
        app:layout_constraintBottom_toBottomOf="@id/tvSearch"
        app:layout_constraintTop_toTopOf="@id/tvSearch"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.kennyc.view.MultiStateView
        android:id="@+id/msvSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:msv_emptyView="@layout/layout_empty"
        app:msv_loadingView="@layout/layout_loading_grid"
        app:msv_errorView="@layout/layout_empty"
        app:layout_constraintTop_toBottomOf="@id/tvSearch">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvRecipe"
            android:layout_marginTop="@dimen/dimen_24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/item_recipe"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="2"/>
    </com.kennyc.view.MultiStateView>

</androidx.constraintlayout.widget.ConstraintLayout>